Fixed random large tweet bug

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,11 @@ div#sidebar {
 
 #map {
   float:left;
-  width: 800px;
-  height:550px;
+  width: 400px;
+  height: 600px;
   overflow: hidden;
+}
+
+#preload {
+  display: none;
 }
