--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,19 @@ div#sidebar {
   overflow: hidden;
 }
 
+#myMapContainer {
+  	float:left;
+	width: 800px;
+	height: 800px;
+	overflow: hidden;
+}
+
+#myMap {
+	float: left;
+	zoom: 150%;
+/*	crop: auto;rect(0px, 800px, 85px, 30px)*/
+}
+
 #preload {
   display: none;
 }
